--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "@google/genai": "^1.29.0",
+    "@neondatabase/serverless": "^1.0.2",
     "@tailwindcss/vite": "^4.1.14",
     "@vercel/node": "^5.6.6",
-    "@vercel/postgres": "^0.10.0",
     "@vitejs/plugin-react": "^5.0.4",
     "better-sqlite3": "^12.4.1",
     "dotenv": "^17.2.3",
